--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -128,6 +128,10 @@
     <Compile Include="Migrations\202501081813592_CodeGenerated_20250108.designer.cs">
       <DependentUpon>202501081813592_CodeGenerated_20250108.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501132050349_AddMobileChatBackend.cs" />
+    <Compile Include="Migrations\202501132050349_AddMobileChatBackend.Designer.cs">
+      <DependentUpon>202501132050349_AddMobileChatBackend.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2445,6 +2449,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501081813592_CodeGenerated_20250108.resx">
       <DependentUpon>202501081813592_CodeGenerated_20250108.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501132050349_AddMobileChatBackend.resx">
+      <DependentUpon>202501132050349_AddMobileChatBackend.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
