- Added temporary migration to set missing default security on some financial models.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -124,6 +124,10 @@
     <Compile Include="Migrations\202501151638572_TempAddEntitySearchPages.Designer.cs">
       <DependentUpon>202501151638572_TempAddEntitySearchPages.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501151807072_TempAddDefaultSecurityToFinance.cs" />
+    <Compile Include="Migrations\202501151807072_TempAddDefaultSecurityToFinance.Designer.cs">
+      <DependentUpon>202501151807072_TempAddDefaultSecurityToFinance.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2438,6 +2442,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501151638572_TempAddEntitySearchPages.resx">
       <DependentUpon>202501151638572_TempAddEntitySearchPages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501151807072_TempAddDefaultSecurityToFinance.resx">
+      <DependentUpon>202501151807072_TempAddDefaultSecurityToFinance.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
