--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -136,6 +136,10 @@
     <Compile Include="Migrations\202501152023534_AddNewRestV2CrudControllers.Designer.cs">
       <DependentUpon>202501152023534_AddNewRestV2CrudControllers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501152224140_ImprovePeerNetworkRelationshipTrends.cs" />
+    <Compile Include="Migrations\202501152224140_ImprovePeerNetworkRelationshipTrends.Designer.cs">
+      <DependentUpon>202501152224140_ImprovePeerNetworkRelationshipTrends.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2460,6 +2464,9 @@
     <EmbeddedResource Include="Migrations\202501152023534_AddNewRestV2CrudControllers.resx">
       <DependentUpon>202501152023534_AddNewRestV2CrudControllers.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501152224140_ImprovePeerNetworkRelationshipTrends.resx">
+      <DependentUpon>202501152224140_ImprovePeerNetworkRelationshipTrends.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
     </EmbeddedResource>
@@ -4181,6 +4188,7 @@
     <None Include="Migrations\Version 16.0\Version 1.16.7\202410101546296_AddDefaultCheckInAdvertisement_Image.jpg">
       <DependentUpon>202410101546296_AddDefaultCheckInAdvertisement.cs</DependentUpon>
     </None>
+    <Content Include="Migrations\202501152224140_ImprovePeerNetworkRelationshipTrends_spPeerNetwork_UpdateFollowing.sql" />
     <Content Include="Migrations\Version 16.0\Version 1.16.7\202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements_spFinance_PledgeAnalyticsQuery.sql" />
     <Content Include="Migrations\Version 16.0\Version 1.16.7\202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements_spFinance_PledgeAnalyticsQueryWithMultipleAccountIds.sql" />
     <Content Include="Migrations\Version 15.0\Version 1.15.0\202302092033593_Rollup_20230209_UpdateRemindersSystemCommunication.sql">
