--- a/Rock.Tests.Integration/packages.config
+++ b/Rock.Tests.Integration/packages.config
@@ -4,6 +4,7 @@
   <package id="AWSSDK.S3" version="3.3.21.1" targetFramework="net472" />
   <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net472" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
+  <package id="CsvHelper" version="2.16.3.0" targetFramework="net472" />
   <package id="Docker.DotNet" version="3.125.15" targetFramework="net472" />
   <package id="Docker.DotNet.X509" version="3.125.15" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
