--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -140,6 +140,10 @@
     <Compile Include="Migrations\202501152224140_ImprovePeerNetworkRelationshipTrends.Designer.cs">
       <DependentUpon>202501152224140_ImprovePeerNetworkRelationshipTrends.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501171949509_FixAdaptiveMessagesAttributeKey.cs" />
+    <Compile Include="Migrations\202501171949509_FixAdaptiveMessagesAttributeKey.designer.cs">
+      <DependentUpon>202501171949509_FixAdaptiveMessagesAttributeKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2466,6 +2470,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501152224140_ImprovePeerNetworkRelationshipTrends.resx">
       <DependentUpon>202501152224140_ImprovePeerNetworkRelationshipTrends.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501171949509_FixAdaptiveMessagesAttributeKey.resx">
+      <DependentUpon>202501171949509_FixAdaptiveMessagesAttributeKey.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
