- Fixed compiler warnings.

--- a/Rock.Tests.UnitTests.Performance/Rock.Tests.UnitTests.Performance.csproj
+++ b/Rock.Tests.UnitTests.Performance/Rock.Tests.UnitTests.Performance.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+    <PackageReference Include="System.Security.AccessControl" Version="5.0.0" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
   </ItemGroup>
 
