--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -148,6 +148,14 @@
     <Compile Include="Migrations\202501211620250_TvApplicationPages.Designer.cs">
       <DependentUpon>202501211620250_TvApplicationPages.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501221847578_Rollup_20250122.cs" />
+    <Compile Include="Migrations\202501221847578_Rollup_20250122.designer.cs">
+      <DependentUpon>202501221847578_Rollup_20250122.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501221932491_CodeGenerated_20250122.cs" />
+    <Compile Include="Migrations\202501221932491_CodeGenerated_20250122.designer.cs">
+      <DependentUpon>202501221932491_CodeGenerated_20250122.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2480,6 +2488,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501211620250_TvApplicationPages.resx">
       <DependentUpon>202501211620250_TvApplicationPages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501221847578_Rollup_20250122.resx">
+      <DependentUpon>202501221847578_Rollup_20250122.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501221932491_CodeGenerated_20250122.resx">
+      <DependentUpon>202501221932491_CodeGenerated_20250122.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
