- LMS kickback items

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -156,6 +156,10 @@
     <Compile Include="Migrations\202501221932491_CodeGenerated_20250122.designer.cs">
       <DependentUpon>202501221932491_CodeGenerated_20250122.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501222321272_LMSAnnouncements.cs" />
+    <Compile Include="Migrations\202501222321272_LMSAnnouncements.Designer.cs">
+      <DependentUpon>202501222321272_LMSAnnouncements.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2494,6 +2498,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501221932491_CodeGenerated_20250122.resx">
       <DependentUpon>202501221932491_CodeGenerated_20250122.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501222321272_LMSAnnouncements.resx">
+      <DependentUpon>202501222321272_LMSAnnouncements.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
