--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -160,6 +160,10 @@
     <Compile Include="Migrations\202501222321272_LMSAnnouncements.Designer.cs">
       <DependentUpon>202501222321272_LMSAnnouncements.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501231528264_AddPrinterDpiAttributeToDevice.cs" />
+    <Compile Include="Migrations\202501231528264_AddPrinterDpiAttributeToDevice.Designer.cs">
+      <DependentUpon>202501231528264_AddPrinterDpiAttributeToDevice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2501,6 +2505,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501222321272_LMSAnnouncements.resx">
       <DependentUpon>202501222321272_LMSAnnouncements.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501231528264_AddPrinterDpiAttributeToDevice.resx">
+      <DependentUpon>202501231528264_AddPrinterDpiAttributeToDevice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
