--- a/Rock.Tests.Shared/Rock.Tests.Shared.csproj
+++ b/Rock.Tests.Shared/Rock.Tests.Shared.csproj
@@ -217,6 +217,7 @@
     <Compile Include="TestFramework\Database\ITestDatabaseContainer.cs" />
     <Compile Include="TestFramework\Database\ITestDatabaseInitializer.cs" />
     <Compile Include="TestFramework\Database\LocalDatabaseContainer.cs" />
+    <Compile Include="TestFramework\MsSqlContainerPool.cs" />
     <Compile Include="TestFramework\NumericAssertExtensions.cs" />
     <Compile Include="TestFramework\DateTimeAssertExtensions.cs" />
     <Compile Include="TestFramework\AssertExtensions.cs" />
