--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ Rock.XML
 Quartz.xml
 StyleCop.Cache
 
+#the file for tracking the last built version.
+last_built_version.txt
+
 #build artifacts
 **/[Bb]in/[Dd]ebug
 **/[Bb]in/[Rr]elease
