--- a/Rock.Tests.UnitTests/Rock.Tests.UnitTests.csproj
+++ b/Rock.Tests.UnitTests/Rock.Tests.UnitTests.csproj
@@ -217,6 +217,7 @@
     <Compile Include="Rock\CheckIn\v2\Filters\LocationOverflowOpportunityFilterTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Filters\MembershipOpportunityFilterTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Filters\PreferredGroupsOpportunityFilterTests.cs" />
+    <Compile Include="Rock\CheckIn\v2\Filters\ScheduleRequirementOpportunityFilterTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Filters\ThresholdOpportunityFilterTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Labels\Renderers\TextLabelRendererTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Labels\Renderers\ZplImageHelperTests.cs" />
