--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -719,6 +719,7 @@
     <Compile Include="Attribute\QueryableAttributeWrapper.cs" />
     <Compile Include="Cms\RestActionMetadata.cs" />
     <Compile Include="Cms\RestControllerMetadata.cs" />
+    <Compile Include="Core\AttributeDisplaySettings.cs" />
     <Compile Include="Core\EntitySearch\CustomExtensionMethodsExpressionVisitor.cs" />
     <Compile Include="Core\EntitySearch\DynamicLinqCustomTypeProvider.cs" />
     <Compile Include="Core\EntitySearch\DynamicLinqQueryExtensionMethods.cs" />
@@ -2423,6 +2424,7 @@
     <Compile Include="Utility\ExtensionMethods\SecurityGrantExtensions.cs" />
     <Compile Include="Utility\ExtensionMethods\Image.cs" />
     <Compile Include="Utility\ExtensionMethods\DecimalRockExtensions.cs" />
+    <Compile Include="Utility\ExtensionMethods\SiteTypeExtensions.cs" />
     <Compile Include="Utility\FileUrlHelper.cs" />
     <Compile Include="Utility\IdHasher.cs" />
     <Compile Include="Utility\IWebHostEnvironment.cs" />
