- WIP to create pattern for Obsidian DataView filters and selects.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -2739,6 +2739,7 @@
     <Compile Include="Web\UI\Controls\MediaPlayer.cs" />
     <Compile Include="Web\UI\Controls\MediaSelector.cs" />
     <Compile Include="Web\UI\Controls\MobileNavigationActionEditor.cs" />
+    <Compile Include="Web\UI\Controls\ObsidianDataViewComponentWrapper.cs" />
     <Compile Include="Web\UI\Controls\PageNavButtons.cs" />
     <Compile Include="Web\UI\Controls\Grid\PersonProfileLinkField.cs" />
     <Compile Include="Web\UI\Controls\LocationList.cs" />
