--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -168,6 +168,10 @@
     <Compile Include="Migrations\202501291722017_AddAdditionalSettingsToAttribute.Designer.cs">
       <DependentUpon>202501291722017_AddAdditionalSettingsToAttribute.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501310105327_UpdateLMSPageNavBlocks.cs" />
+    <Compile Include="Migrations\202501310105327_UpdateLMSPageNavBlocks.Designer.cs">
+      <DependentUpon>202501310105327_UpdateLMSPageNavBlocks.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2515,6 +2519,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501291722017_AddAdditionalSettingsToAttribute.resx">
       <DependentUpon>202501291722017_AddAdditionalSettingsToAttribute.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501310105327_UpdateLMSPageNavBlocks.resx">
+      <DependentUpon>202501310105327_UpdateLMSPageNavBlocks.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
