- Updated Data View Reports to support Obsidian components.

--- a/Rock.JavaScript.Obsidian.Reporting/tsconfig.json
+++ b/Rock.JavaScript.Obsidian.Reporting/tsconfig.json
@@ -2,6 +2,7 @@
   "files": [],
   "include": [],
   "references": [
-    { "path": "./src/DataFilters" }
+    { "path": "./src/DataFilters" },
+    { "path": "./src/DataSelects" }
   ]
 }
