--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -180,6 +180,10 @@
     <Compile Include="Migrations\202502061833244_CodeGenerated_20250206.designer.cs">
       <DependentUpon>202502061833244_CodeGenerated_20250206.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202502141632185_UpdatePeerNetworkLavaTemplate.cs" />
+    <Compile Include="Migrations\202502141632185_UpdatePeerNetworkLavaTemplate.Designer.cs">
+      <DependentUpon>202502141632185_UpdatePeerNetworkLavaTemplate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2536,6 +2540,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202502061833244_CodeGenerated_20250206.resx">
       <DependentUpon>202502061833244_CodeGenerated_20250206.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502141632185_UpdatePeerNetworkLavaTemplate.resx">
+      <DependentUpon>202502141632185_UpdatePeerNetworkLavaTemplate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
