--- a/Rock/packages.config
+++ b/Rock/packages.config
@@ -138,6 +138,7 @@
   <package id="SixLabors.Fonts" version="1.0.0-beta18" targetFramework="net472" />
   <package id="SixLabors.ImageSharp" version="2.1.9" targetFramework="net472" />
   <package id="SixLabors.ImageSharp.Drawing" version="1.0.0-beta15" targetFramework="net472" />
+  <package id="stream-chat-net" version="2.10.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ClientModel" version="1.0.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
