--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -184,6 +184,10 @@
     <Compile Include="Migrations\202502141632185_UpdatePeerNetworkLavaTemplate.Designer.cs">
       <DependentUpon>202502141632185_UpdatePeerNetworkLavaTemplate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202502182025337_UpdateLMSPageName.cs" />
+    <Compile Include="Migrations\202502182025337_UpdateLMSPageName.Designer.cs">
+      <DependentUpon>202502182025337_UpdateLMSPageName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2543,6 +2547,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202502141632185_UpdatePeerNetworkLavaTemplate.resx">
       <DependentUpon>202502141632185_UpdatePeerNetworkLavaTemplate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502182025337_UpdateLMSPageName.resx">
+      <DependentUpon>202502182025337_UpdateLMSPageName.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
