+ (CMS) Update Personalization Segments to allow adding multiple categories.

--- a/Rock.Blocks/Rock.Blocks.csproj
+++ b/Rock.Blocks/Rock.Blocks.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Cms\LavaShortcodeList.cs" />
     <Compile Include="Cms\MediaAccountList.cs" />
     <Compile Include="Cms\MediaFolderList.cs" />
+    <Compile Include="Cms\PersonalizationSegmentList.cs" />
     <Compile Include="Cms\ThemeDetail.cs" />
     <Compile Include="Communication\Chat\ChatConfiguration.cs" />
     <Compile Include="Communication\CommunicationEntryWizard.cs" />
