--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -192,6 +192,10 @@
     <Compile Include="Migrations\202501292355096_AddCommunicationEntryWizardV2.Designer.cs">
       <DependentUpon>202501292355096_AddCommunicationEntryWizardV2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202502191454371_AddPersonalizationSegmentCategories.cs" />
+    <Compile Include="Migrations\202502191454371_AddPersonalizationSegmentCategories.Designer.cs">
+      <DependentUpon>202502191454371_AddPersonalizationSegmentCategories.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2557,6 +2561,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501292355096_AddCommunicationEntryWizardV2.resx">
       <DependentUpon>202501292355096_AddCommunicationEntryWizardV2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502191454371_AddPersonalizationSegmentCategories.resx">
+      <DependentUpon>202502191454371_AddPersonalizationSegmentCategories.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
