--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -196,6 +196,14 @@
     <Compile Include="Migrations\202502191621368_AddCommunicationEntryWizardV2.Designer.cs">
       <DependentUpon>202502191621368_AddCommunicationEntryWizardV2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202502191712354_Rollup_20250219.cs" />
+    <Compile Include="Migrations\202502191712354_Rollup_20250219.designer.cs">
+      <DependentUpon>202502191712354_Rollup_20250219.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202502191749233_CodeGenerated_20250219.cs" />
+    <Compile Include="Migrations\202502191749233_CodeGenerated_20250219.designer.cs">
+      <DependentUpon>202502191749233_CodeGenerated_20250219.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2564,6 +2572,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202502191621368_AddCommunicationEntryWizardV2.resx">
       <DependentUpon>202502191621368_AddCommunicationEntryWizardV2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502191712354_Rollup_20250219.resx">
+      <DependentUpon>202502191712354_Rollup_20250219.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502191749233_CodeGenerated_20250219.resx">
+      <DependentUpon>202502191749233_CodeGenerated_20250219.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
