--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -716,6 +716,7 @@
     <Compile Include="Attribute\QueryableAttributeWrapper.cs" />
     <Compile Include="Cms\RestActionMetadata.cs" />
     <Compile Include="Cms\RestControllerMetadata.cs" />
+    <Compile Include="Communication\Chat\DTO\ChatUserAuthentication.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatChannelMember.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatUserPerson.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatUserPersonKey.cs" />
