- Improved the Chat Helper to synchronize Person changes to preexisting Chat Users in the external chat system.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -726,6 +726,7 @@
     <Compile Include="Communication\Chat\Sync\SyncGroupMemberToChatCommand.cs" />
     <Compile Include="Communication\Chat\Sync\CreateOrUpdateChatUserResult.cs" />
     <Compile Include="Communication\Chat\Sync\SyncChannelMembersToChatCommand.cs" />
+    <Compile Include="Communication\Chat\Sync\SyncPersonToChatCommand.cs" />
     <Compile Include="Core\AttributeDisplaySettings.cs" />
     <Compile Include="Communication\Chat\ChatHelper.cs" />
     <Compile Include="Communication\Chat\DTO\ChatBadge.cs" />
