- Changed SMS Conversations default filter to "All Messages". Swapped the SMS Conversations Block.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\202502212003201_UpdatePointsEarnedInLmsToAllowNull.Designer.cs">
       <DependentUpon>202502212003201_UpdatePointsEarnedInLmsToAllowNull.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202502242059540_SMSConversationsSwap.cs" />
+    <Compile Include="Migrations\202502242059540_SMSConversationsSwap.designer.cs">
+      <DependentUpon>202502242059540_SMSConversationsSwap.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2592,6 +2596,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202502212003201_UpdatePointsEarnedInLmsToAllowNull.resx">
       <DependentUpon>202502212003201_UpdatePointsEarnedInLmsToAllowNull.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502242059540_SMSConversationsSwap.resx">
+      <DependentUpon>202502242059540_SMSConversationsSwap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
